--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@stitches/react": "^1.2.6",
     "common-breakpoints": "^1.2.1",
+    "framer-motion": "^6.2.8",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
