--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "analyze": "ANALYZE=true next build",
     "lint": "next lint"
   },
   "dependencies": {
@@ -17,11 +18,14 @@
     "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.4",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "next-compose-plugins": "^2.2.1",
+    "next-plausible": "^3.1.9",
     "typescript": "4.5.4"
   }
 }
