--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
+    "@types/react-gtm-module": "^2.0.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "next-compose-plugins": "^2.2.1",
