--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.6",
-    "common-breakpoints": "^1.2.1",
+    "@next/font": "^13.1.2",
+    "@prismicio/client": "^6.7.3",
+    "autoprefixer": "^10.4.13",
     "framer-motion": "^6.2.8",
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^13.1.2",
+    "postcss": "^8.4.21",
+    "prismic-dom": "^2.2.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-intersection-observer": "^8.33.1"
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^8.33.1",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
+    "@rocketseat/eslint-config": "^1.1.3",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
