--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@next/font": "^13.1.2",
     "@prismicio/client": "^6.7.3",
+    "@vercel/og": "^0.0.27",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^6.2.8",
     "next": "^13.1.2",
+    "next-seo": "^5.15.0",
     "postcss": "^8.4.21",
     "prismic-dom": "^2.2.7",
     "react": "^18.2.0",
