--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "@types/node": "17.0.9",
     "@types/react": "17.0.38",
     "@types/react-gtm-module": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "next-compose-plugins": "^2.2.1",
     "next-plausible": "^3.1.9",
+    "prettier": "^2.8.3",
     "typescript": "4.5.4"
   }
 }
