--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.4",
     "@next/font": "^13.1.2",
-    "@prismicio/client": "^6.7.3",
     "@vercel/og": "^0.0.27",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^6.2.8",
+    "graphql": "^16.6.0",
     "next": "^13.1.2",
     "next-seo": "^5.15.0",
     "postcss": "^8.4.21",
-    "prismic-dom": "^2.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^8.33.1",
+    "react-markdown": "^8.0.5",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
