--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.4",
     "@next/font": "^13.1.2",
     "@vercel/og": "^0.0.27",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^6.2.8",
-    "graphql": "^16.6.0",
-    "next": "^13.1.2",
-    "next-seo": "^5.15.0",
+    "next": "^13.2.3",
     "postcss": "^8.4.21",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
@@ -31,6 +29,7 @@
     "@rocketseat/eslint-config": "^1.1.3",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.9",
+    "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
     "@types/react-gtm-module": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
