fix: linted project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "/home/bilusca/Documentos/CODE/my-site/.next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
+    "node_modules"
   ]
 }
