--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^8.33.1",
     "react-markdown": "^8.0.5",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
-    "@rocketseat/eslint-config": "^1.1.3",
+    "@rocketseat/eslint-config": "^1.2.0",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.9",
     "@types/qs": "^6.9.7",
@@ -36,7 +37,9 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "next-compose-plugins": "^2.2.1",
     "next-plausible": "^3.1.9",
     "prettier": "^2.8.3",
