--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.1.4",
+    "@next/bundle-analyzer": "^13.2.3",
     "@rocketseat/eslint-config": "^1.2.0",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.9",
@@ -34,6 +34,7 @@
     "@types/react": "17.0.38",
     "@types/react-gtm-module": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "cross-env": "^7.0.3",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.6.0",
